[gd_scene load_steps=6 format=3 uid="uid://b3gjnn0npytvq"]

[ext_resource type="Script" path="res://scenes/menus/title_screen.gd" id="1_4w0q5"]
[ext_resource type="Texture2D" uid="uid://bwin2hlvow6js" path="res://assets/menus/clouds-4258726_1280.jpg" id="2_oacx6"]
[ext_resource type="Texture2D" uid="uid://b3yy7mvloos1c" path="res://assets/menus/game_logo.png" id="3_4gwu1"]
[ext_resource type="Theme" uid="uid://dp6k6ogyibshp" path="res://assets/theme/menu.tres" id="4_r3gqn"]
[ext_resource type="FontFile" uid="uid://bfg3x82e0mrlp" path="res://assets/fonts/hog danish.ttf" id="5_h6tor"]

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("play_button", "settings_button", "quit_button")]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4w0q5")
play_button = NodePath("TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/PlayButton")
settings_button = NodePath("TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/SettingsButton")
quit_button = NodePath("TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/QuitButton")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oacx6")

[node name="MainMenu" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MainMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 430
theme_override_constants/margin_right = 430

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(698.137, 0)
layout_mode = 2
texture = ExtResource("3_4gwu1")
expand_mode = 5

[node name="MarginContainer4" type="MarginContainer" parent="TextureRect/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 650
theme_override_constants/margin_right = 650

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer2"]
process_mode = 3
layout_mode = 2

[node name="PlayButton" type="Button" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("4_r3gqn")
theme_override_fonts/font = ExtResource("5_h6tor")
theme_override_font_sizes/font_size = 55
text = "PLAY"

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="SettingsButton" type="Button" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
focus_next = NodePath("../QuitButton")
focus_previous = NodePath(".")
theme = ExtResource("4_r3gqn")
theme_override_fonts/font = ExtResource("5_h6tor")
theme_override_font_sizes/font_size = 55
text = "SETTINGS"

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="QuitButton" type="Button" parent="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../SettingsButton")
theme = ExtResource("4_r3gqn")
theme_override_fonts/font = ExtResource("5_h6tor")
theme_override_font_sizes/font_size = 55
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="button_up" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="mouse_entered" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="button_up" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="mouse_entered" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="button_up" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="mouse_entered" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/MainMenu/VBoxContainer/MarginContainer2/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
